# wepo-server

./: .gitignore  Cargo.toml  README.md  dump.rdb
api/: user.md
sql/: add_post.sql  add_user.sql  delete_post.sql  get_user.sql  schema.sql  trigger.sql
sql/friendship/: add_friendship.sql  remove_friendship.sql
sql/msg/: delete_post_notices.sql  get_comment_notices.sql  get_comments.sql  get_friend_notices.sql  get_like_notices.sql  get_notices.sql  get_post_notices.sql  insert_notices.sql  set_read.sql
sql/post/: add.sql  add_post.sql  browse.sql  comment.sql  comment_post.sql  delete.sql  delete_post.sql  get.sql  get_comments.sql  get_list.sql  get_post.sql  get_post_list.sql  get_sender.sql  like_post.sql  unlike.sql  unlike_post.sql
sql/user/: add_user.sql  change_nick.sql  get_user.sql  get_user_from_nick.sql  search_user.sql
src/: config.rs  data_models.rs  errors.rs  main.rs  models.rs
src/base/: big_int.rs  enum_num.rs  mod.rs  paging_data.rs  pg_client.rs  redis_key.rs  resp.rs  token_str.rs  user_info.rs
src/data_models/: mod.rs  notice.rs  post.rs  post_extend.rs  user.rs
src/db/: friend.rs  mod.rs  msg.rs  post.rs  user.rs
src/dto/: user.rs
src/handlers/: mod.rs  user.rs
src/handlers/friendship/: dto.rs  handler.rs  mod.rs  storage.rs
src/middleware/: delay.rs
src/models/: mod.rs
src/traits/: mod.rs  sync_cache.rs
src/utils/: db.rs  db_helper.rs  extension.rs  mod.rs
test-client/: package.json
test-client/src/: App.vue  data.d.ts  data.ts  index.css  main.js  pageRouter.js  pageRouter.ts  types.d.ts  vite-env.d.ts
(+45 files in other folders)
