[package]
name = "wepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.19"
config = "0.13.1"
deadpool-postgres = { version="0.10.2", features=["serde"]}
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version="1.0.137", features=["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
sha256 = "1.0.3"
rand = "0.8.5"
