[package]
name = "wepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = { version="0.4.19", features=["serde"]}
config = "0.13.1"
deadpool-postgres = { version="0.10.2", features=["serde"]}
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version="1.0.137", features=["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version="0.7.6", features=["with-chrono-0_4", "with-uuid-1"]}
sha256 = "1.0.3"
rand = "0.8.5"
serde_postgres = "0.2.0"
serde_derive = "1.0.137"
actix-redis = "0.11.0"
actix = "0.12.0"
redis-async = "0.12.1"
serde_json = "1.0.82"
jsonwebtoken = "8.1.1"
futures = "0.3.21"
uuid = { version="1.1.2", features=["v4", "serde"]}
actix-cors = "0.6.1"
async-trait = "0.1.56"
rs-snowflake = "0.6.0"
once_cell = "1.13.0"
